--- a/index.html
+++ b/index.html
@@ -6,7 +6,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Made Food Service</title>
-</head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kanit:ital@1&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+</head id="main-container">
+<section class="intro_area flexible-display">
+    <div class="half-width-div">
+        <h1 id="main-heading"><span class="orange-color-font">Skip</span> the diet just eat healthy with <strong>home
+                made food service</strong>
+        </h1>
+        <p>Are you worried about your health, junk food and diet? Just throuw your tension and contact with us. Because
+            we are here to provide healthy and delcious food for you.</p>
+        <a href="#" target="_blank" class="link-button">Order food now</a>
+    </div>
+    <div class="half-width-div">
+        <img src="images/male/31602633-happy-man-with-unhealthy-burger-sandwich-in-hand-get-ready-to-eat-isolated-on-a-white-background-fas-removebg-preview.png"
+            alt="man with unhelthy food">
+    </div>
+</section>
 
 <body>
 
