myself area added

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Kanit:ital@1&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head id="main-container">
-<section class="intro_area flexible-display">
+<section class="top_area flexible-display">
     <div class="half-width-div">
         <h1 id="main-heading"><span class="orange-color-font">Skip</span> the diet just eat healthy with <strong>home
                 made food service</strong>
@@ -23,6 +23,33 @@
     <div class="half-width-div">
         <img src="images/male/31602633-happy-man-with-unhealthy-burger-sandwich-in-hand-get-ready-to-eat-isolated-on-a-white-background-fas-removebg-preview.png"
             alt="man with unhelthy food">
+    </div>
+</section>
+<section id="myself-area" class="flexible-display">
+    <div class="half-width-div">
+        <img src="images/male/ashraf (2).png" alt="Md. Ashrafuzzaman">
+    </div>
+    <div class="half-width-div">
+        <h2>About Myself
+        </h2>
+        <p>I'm Md. Ashrafuzzaman, founder of <strong>Home Made Food Service</strong> at Dhaka. After complete master's
+            dgree from national university I joined for a 2 years long diploma on food at Bangladesh Porjoton
+            Corporation. After compelete diploma I start <strong>Home Made Food Service</strong> with some of my
+            friends. We strat our dream project to provide healty and delicious food which made by organic way.</p>
+        <a href="#" target="_blank" class="link-button">Contact with me</a>
+    </div>
+</section>
+<section id="food-area">
+    <div id="our-foods">
+        <h2>Our Foods</h2>
+        <p>We provide different type of local and continental food. the way of making our food is 100% healthy and raw
+            marerials are organic. We provide lunch, dinner and evening snacks. We also consious about your health and
+            food habbit. Some of our special item's are describe below:</p>
+    </div>
+    <div>
+        <div>
+
+        </div>
     </div>
 </section>
 
