Food Item Part added

--- a/index.html
+++ b/index.html
@@ -46,9 +46,35 @@
             marerials are organic. We provide lunch, dinner and evening snacks. We also consious about your health and
             food habbit. Some of our special item's are describe below:</p>
     </div>
-    <div>
+    <div class="flexible-display food-item">
+        <div class="one-third-div box-shadow-div">
+            <img src="images/food/Project Cover1.jpg" alt="">
+            <h3>Stek With Nuts</h3>
+            <p></p>
+        </div>
+        <div class="one-third-div box-shadow-div">
+            <img src="images/food/Project Cover.png" alt="">
+            <h3>Special Thai Soup</h3>
+            <p></p>
+        </div>
+        <div class="one-third-div box-shadow-div">
+            <img src="images/food/Project Cover5.png" alt="">
+            <h3>Vegitable Salad</h3>
+            <p></p>
+        </div>
+    </div>
+    <div class="flexible-display box-shadow-div">
+        <div class="one-third-div">
+            <h4>Stek With Nuts</h4>
+            <p></p>
+        </div class="one-third-div">
         <div>
-
+            <h4>Special Thai Soup</h4>
+            <p></p>
+        </div>
+        <div class="one-third-div">
+            <h4>Vegitable Salad</h4>
+            <p></p>
         </div>
     </div>
 </section>
