--- a/index.html
+++ b/index.html
@@ -9,78 +9,160 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kanit:ital@1&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="style.css">
-</head id="main-container">
-<section class="top_area flexible-display">
-    <div class="half-width-div">
-        <h1 id="main-heading"><span class="orange-color-font">Skip</span> the diet just eat healthy with <strong>home
-                made food service</strong>
-        </h1>
-        <p>Are you worried about your health, junk food and diet? Just throuw your tension and contact with us. Because
-            we are here to provide healthy and delcious food for you.</p>
-        <a href="#" target="_blank" class="link-button">Order food now</a>
-    </div>
-    <div class="half-width-div">
-        <img src="images/male/31602633-happy-man-with-unhealthy-burger-sandwich-in-hand-get-ready-to-eat-isolated-on-a-white-background-fas-removebg-preview.png"
-            alt="man with unhelthy food">
-    </div>
-</section>
-<section id="myself-area" class="flexible-display">
-    <div class="half-width-div">
-        <img src="images/male/ashraf (2).png" alt="Md. Ashrafuzzaman">
-    </div>
-    <div class="half-width-div">
-        <h2>About Myself
-        </h2>
-        <p>I'm Md. Ashrafuzzaman, founder of <strong>Home Made Food Service</strong> at Dhaka. After complete master's
-            dgree from national university I joined for a 2 years long diploma on food at Bangladesh Porjoton
-            Corporation. After compelete diploma I start <strong>Home Made Food Service</strong> with some of my
-            friends. We strat our dream project to provide healty and delicious food which made by organic way.</p>
-        <a href="#" target="_blank" class="link-button">Contact with me</a>
-    </div>
-</section>
-<section id="food-area">
-    <div id="our-foods">
-        <h2>Our Foods</h2>
-        <p>We provide different type of local and continental food. the way of making our food is 100% healthy and raw
-            marerials are organic. We provide lunch, dinner and evening snacks. We also consious about your health and
-            food habbit. Some of our special item's are describe below:</p>
-    </div>
-    <div class="flexible-display food-item">
-        <div class="one-third-div box-shadow-div">
-            <img src="images/food/Project Cover1.jpg" alt="">
-            <h3>Stek With Nuts</h3>
-            <p></p>
-        </div>
-        <div class="one-third-div box-shadow-div">
-            <img src="images/food/Project Cover.png" alt="">
-            <h3>Special Thai Soup</h3>
-            <p></p>
-        </div>
-        <div class="one-third-div box-shadow-div">
-            <img src="images/food/Project Cover5.png" alt="">
-            <h3>Vegitable Salad</h3>
-            <p></p>
-        </div>
-    </div>
-    <div class="flexible-display box-shadow-div">
-        <div class="one-third-div">
-            <h4>Stek With Nuts</h4>
-            <p></p>
-        </div class="one-third-div">
-        <div>
-            <h4>Special Thai Soup</h4>
-            <p></p>
-        </div>
-        <div class="one-third-div">
-            <h4>Vegitable Salad</h4>
-            <p></p>
-        </div>
-    </div>
-</section>
+</head>
 
-<body>
+<!--Main body start-->
 
+<body id="main-container">
+
+    <!--Bannar Section (Bonus) start-->
+
+    <div id="bannar" class="flexible-display">
+        <div id="logo-area">
+            <h6>Home made food service</h6>
+        </div>
+        <div id="search-area" class="flexible-display">
+            <p>Search your favorite food </p>
+            <div>
+                <input type="search" size="80">
+            </div>
+            <div>
+                <label><a href="#" target="_blank" class="link-button">Search</a></label>
+            </div>
+            <div class="flexible-display" id="user-related-area">
+                <i class="fas fa-user"> <a href="#" target="_blank">login</a> </i>
+            </div>
+        </div>
+    </div>
+    <!--Bannar Section (Bonus) end-->
+    <!--Upper section start-->
+
+    <section class="top_area flexible-display">
+        <div class="half-width-div">
+            <h1 id="main-heading"><span class="orange-color-font">Skip</span> the diet just eat healthy with
+                <strong>home
+                    made food service</strong>
+            </h1>
+            <p>Are you worried about your health, junk food and diet? Just throuw your tension and contact with us.
+                Because we are here to provide healthy and delcious food for you.</p>
+            <a href="https://myaccount.google.com/?utm_source=OGB&utm_medium=act&pli=1" target="_blank"
+                class="link-button">Order food now</a>
+        </div>
+        <div class="half-width-div">
+            <img src="images/male/31602633-happy-man-with-unhealthy-burger-sandwich-in-hand-get-ready-to-eat-isolated-on-a-white-background-fas-removebg-preview.png"
+                alt="man with unhelthy food">
+        </div>
+    </section>
+
+    <!--Upper section end-->
+    <!--middle section start-->
+
+    <section id="myself-area" class="flexible-display">
+        <div class="half-width-div">
+            <img src="images/male/ashraf (2).png" alt="Md. Ashrafuzzaman">
+        </div>
+        <div class="half-width-div">
+            <h2>About Myself
+            </h2>
+            <p>I'm Md. Ashrafuzzaman, founder of <strong>Home Made Food Service</strong> at Dhaka. After complete
+                master's
+                dgree from national university I joined for a 2 years long diploma on food at Bangladesh Porjoton
+                Corporation. After compelete diploma I start <strong>Home Made Food Service</strong> with some of my
+                friends. We strat our dream project to provide healty and delicious food which made by organic way.</p>
+            <a href="https://www.facebook.com/profile.php?id=100054884236466" target="_blank"
+                class="link-button">Contact with me</a>
+        </div>
+    </section>
+
+    <!--middle section end-->
+    <!--lower section start-->
+
+    <section id="food-area">
+        <div id="our-foods">
+            <h2>Our Special Food Items</h2>
+            <p>We provide different type of local and continental food. the way of making our food is 100% healthy and
+                raw
+                marerials are organic. We provide lunch, dinner and evening snacks. We also consious about your health
+                and
+                food habbit. Some of our special item's are describe below:</p>
+        </div>
+        <div class="flexible-display" id="food-item">
+            <div class="one-third-div box-shadow-div">
+                <img src="images/food/Project Cover1.jpg" alt="">
+                <h3>Steak With Nuts</h3>
+                <p>Yakiniku meaning meats marinated and grilled over a flame, is a Japanese term describing their style
+                    of BBQ inspired by western food. Our deliciously savoury
+                    steak rub featuring umami flavours is the perfect marinade for a piece of sirloin along with Kinoko
+                    Gohan, a steamed rice dish with shiitake mushrooms, seasoned
+                    with the classic Japanese 7- spice mix, shichimi togarashi. A savoury and buttery miso sauce
+                    drizzled over everything finishes the dish.</p>
+            </div>
+            <div class="one-third-div box-shadow-div">
+                <img src="images/food/Project Cover.png" alt="">
+                <h3>Special Thai Soup</h3>
+                <p>Thai cuisine is well known for its deeply delicious soups. They're loaded up with thrilling flavors
+                    and are as satisfying during the chilliest winter months as they are during the height of summer.
+                    These have staying power! We're talking about classic Thai curry soups, hot and sour soups, noodle
+                    soups, the works. Best of all, your favorite Thai soups are quick and easy to make at home. These
+                    satisfying soups are all on the table in less than an hour.</p>
+            </div>
+            <div class="one-third-div box-shadow-div">
+                <img src="images/food/Project Cover5.png" alt="">
+                <h3>Vegitable Salad</h3>
+                <p>For a deliciously spicy kick, you’ll roast sweet potato and broccoli in chipotle chile paste before
+                    tossing them with warm grains and fresh citrus. Toppings of creamy avocado and crispy tortilla
+                    strips complete this loaded salad with even more exciting flavor and texture.</p>
+            </div>
+        </div>
+    </section>
+
+    <!--lower section end-->
+    <!--optional Section (Bonus) start-->
+
+    <section id="bottom-area" class="flexible-display box-shadow-div">
+        <div id="social-media-area">
+            <p>Follow us on social media</p>
+            <div class="flexible-display social-media-part">
+                <div class="one-third-div">
+                    <p>please subscribe our channel</p>
+                    <a href="https://www.youtube.com/" target="_blank"><i
+                            class="fab fa-youtube social-media-icon youtue-icon"></i></a>
+                    <p>700k members already subcribed</p>
+                </div>
+                <div class="one-third-div">
+                    <p>please like our page</p>
+                    <a href="https://www.facebook.com/" target="_blank"><i
+                            class="fab fa-facebook social-media-icon"></i></a>
+                    <p>100k user liked</p>
+                </div>
+                <div class="one-third-div">
+                    <p>please follow our twitter handal</p>
+                    <a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter social-media-icon"></i></a>
+                    <p>50k user follow us</p>
+                </div>
+            </div>
+        </div>
+
+        <div id="feedback-area">
+            <p>Let give us a sugetion to improve our service in future </p><br>
+            <label>Type your name</label> <input type="text" placeholder="Full Name"><br><br>
+            <label>Provide your email address</label> <input type="email" placeholder="Email Address"><br><br>
+            <textarea name="#" id="#" cols="40" rows="6"></textarea>
+        </div>
+        </div>
+    </section>
+    <!--optional Section (Bonus) start-->
+
+    <!--Footer start-->
+
+    <footer id="footer-area">
+        <h3><span class="orange-color-font">HOME</span> <span id="grey-color-font">MADE FOOD SERVICE</span></h3>
+        <p> Health is wealth so eat Good food make healthy life</p>
+    </footer>
+
+    <!--Footer end-->
 </body>
 
 </html>
